# nixos-config

./: 0001-Add-debugging.patch  0001-Add-octet-string-encoding-to-EC_POINT-for-ED25519.patch  0001-Add-octet-string-type-to-create-public-key.patch  0001-No-EC_POINT-for-ed-private-keys.patch  configuration.nix  flake.nix  gnupg.patch  hardware-configuration.nix  klassy.nix  strongswan.patch
cosmic-askpass/: Cargo.toml  default.nix
cosmic-askpass/src/: main.rs
